# inquire-modeltest-sdk

./: .coverage  .env-template  .gitignore  404.html  Dockerfile  LICENSE  LICENSE.txt  README.md  dev.py  docker-compose.test.yml  docker-compose.yml  index.html  log.txt  main.py  mkdocs.yml  modeltest_demo.ipynb  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  sdk_v_even_demo.sh  setup.py  sitemap.xml  test-start.sh  tests.Dockerfile
.github/: dependabot.yml
.github/workflows/: build.yml  continous-integration-pip.yml  docs.yml  publish-package.yml  publish.yml  pytest.yml  security_check.yml  test.yml
caching/: index.html
coordinates/: index.html
demo/: 6DOF.py  even_decay.py  sdk_decay.py
docker_scripts/: load_extensions.sh
docs/: caching.md  coordinates.md  examples.md  index.md  installation.md
examples/: Pipeline_tutorial.ipynb  add_restricted_access.py  basic.py  caching.py  clear_cache.py  create.py  demo_sorting.py  filter_and_sort.py  filtered_statistics.py  find_multiple_timeseries.py  find_natural_period.py  generic_methods.py  index.html  quickstart.ipynb  statistics.py  test.ipynb  wipe_db_NOT_FOR_RELEASE.py
examples/.ipynb_checkpoints/: test-checkpoint.ipynb
modeltestSDK/: __init__.py  api.py  api_resources.py  client.py  config.py  exceptions.py  plot_timeseries.py  query.py  resources.py  utils.py
modeltestSDK/api/: __init__.py  base.py  campaign.py  floater_config.py  sensor.py  tag.py  test.py  timeseries.py
modeltestSDK/examples/: add_restricted_access.py  demo_sorting.py  filtered_statistics.py  find_multiple_timeseries.py  find_natural_period.py  generic_methods.py  wipe_db_NOT_FOR_RELEASE.py
modeltestSDK/resources/: __init__.py  base.py  campaign.py  datapoint.py  floater_config.py  sensor.py  statistics.py  tag.py  test.py  timeseries.py
modeltestSDK/tests/: conftest.py  test_campaign.py
modeltestsdk/: __init__.py  client.py  config.py  query.py  utils.py
modeltestsdk/api/: base.py  campaign.py  floater_config.py  sensor.py  tag.py  test.py  timeseries.py
modeltestsdk/resources/: __init__.py  base.py  campaign.py  datapoint.py  floater_config.py  sensor.py  tag.py  test.py  timeseries.py
pipeline/: __init__.py  add_campaign.py  add_floater_test.py  add_floater_tests.py  add_sensors.py  add_timeseries.py  add_wave_calibrations.py  add_wave_current_calibration.py  add_wind_condition_calibration.py  create_demo_data.py  plot_timeseries.py  run_pipeline.py
pipeline/Luva/: add_calibrations.py  add_floater_config.py  add_sensor.py  add_test.py  add_timeseries.py  run_pipeline.py
pipeline/Luva_I/: Pipeline_Input_Luva_I.xls  pipeline_luva.py
pipeline/Luva_II/: Pipeline_Input_Luva_II.xls  pipeline_luva_ii.py
pipeline/Luva_phase_2/: add_floater_config.py  add_test.py  run_pipeline.py
pipeline/Luva_rewrite/: ImportPipelineInput.xls  Pipeline_Input_Luva_I.xls  pipeline_luva.py
pipeline/STT/: add_floater_tests.py  add_sensors.py  add_timeseries.py  add_wave_calibrations.py  run_pipeline.py
pipeline/Utils/: wipe_db.py
pipeline/WhitePearl/: Pipeline_Input_White_Pearl.xls  add_decay_tests.py  add_floater_config.py  add_sensor.py  add_sensors.py  add_tests.py  add_timeseries.py  add_wave_calibrations.py  pipeline_white_pearl.py  run_pipeline.py
pipeline/utils/: __init__.py  data_extraction.py  (+1 more)
scripts/: test.sh
search/: search_index.json
tests/: conftest.py  utils.py
(+29 files in other folders)
