[tool.poetry]
name = "modeltestsdk"
version = "3.1.3"
description = "SDK for use with modeltest API"
authors = ["Jørgen Engelsen","Per Voie", "Snorre Fjellvang <slf@sevanssp.com>", "Einar Glomnes <ebg@sevanssp.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SevanSSP/inquire-modeltest-sdk"
packages = [{ include = "modeltestsdk" },]
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
matplotlib = "^3.10.5"
requests="2.32.5"
python = ">=3.10,<3.13"
pydantic = "^2.11.7"
requests-cache = "^1.2.1"
qats = "^5"
pandas = "^2.3.2"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.6"
pytest = "^8.4.1"
nox = "^2025.5.1"
scipy="^1.15.3"
jupyter="^1.1.1"
mkdocs = "1.6.1"
mkdocs-material = "^9.6.16"
coverage = "^7.10.3"
pytest-cov = "^6.2.1"
pytest-docker = "^3.2.3"

[tool.poetry.urls]
download = "https://api.packagr.app/EYvhW6SyL/"
issues = "https://github.com/SevanSSP/inquire-modeltest-sdk/issues"

[build-system]
requires = ["poetry>=1.8"]
build-backend = "poetry.masonry.api"
