[project]
name = "modeltestsdk"
version = "3.1.4"
description = "SDK for use with modeltest API"
authors = [
    {name = "Jørgen Engelsen"},
    {name = "Per Voie"},
    {name = "Snorre Fjellvang", email = "slf@sevanssp.com"},
    {name = "Einar Glomnes", email = "ebg@sevanssp.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "matplotlib>=3.10.0",
    "requests>=2.32.5",
    "pydantic>=2.11.0",
    "requests-cache>=1.2.1",
    "qats>=5",
    "pandas>=2.2.0",
    "pydantic-settings>=2.13.1",
]

[project.urls]
Repository = "https://github.com/SevanSSP/inquire-modeltest-sdk"
Issues = "https://github.com/SevanSSP/inquire-modeltest-sdk/issues"
Download = "https://api.repoforge.io/EYvhW6SyL/"

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "pytest>=8.4.0",
    "nox>=2025.5.1",
    "scipy>=1.15.0",
    "jupyter>=1.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
    "coverage>=7.10.0",
    "pytest-cov>=6.2.0",
    "pytest-docker>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"